# applied-ai

./: .gitignore  README.md
wine-analysis/: README.md  exploratory-analysis.ipynb  pyproject.toml  task_1.ipynb  task_2.ipynb  task_3.ipynb
wine-analysis/data/: red_wine.csv  white_wine.csv
wine-analysis/models/: gb_clf.pkl  lin_reg.pkl  nn.pkl  task_1_svr_reg.pkl  task_2_log_reg.pkl  task_3_nn.pkl  task_3_svm_clf.pkl
wine-analysis/report/: report.tex
wine-analysis/wine_analysis/: exploratory-analysis.py  task_1.py  task_2.py  task_3.py
ws00/: pyproject.toml
ws00/ws00/: ws00.ipynb
ws01/: pyproject.toml
ws01/data/: kc_house_data.csv
ws01/ws01/: ws01.ipynb
