[tool.poetry]
name = "wine-analysis"
version = "0.1.0"
description = ""
authors = ["hjoaquim <h.joaquim@campus.fct.unl.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
openbb-devtools = "^1.1.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
